--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,7 @@ body {
 	}
 }
 
-/* Main styles for header */
+/* Main styles for title */
 .app-title {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 3.5rem;
@@ -90,8 +90,10 @@ body {
 	display: flex;
 	flex-direction: row;
 	gap: 10px;
-	margin-bottom: 10px;
+	margin: 20px auto 10px auto;
 	width: 100%;
+	max-width: 800px;
+	padding: 0 20px;
 }
 
 /* Task input container */
@@ -144,6 +146,10 @@ body {
 #delete-completed-button {
 	background-color: #ed3846;
 	display: none;
+	max-width: 800px;
+	margin: 20px auto 0 auto;
+	padding: 0 20px;
+	width: 100%;
 }
 
 #delete-completed-button:hover {
@@ -171,7 +177,7 @@ body {
 	font-size: 16px;
 	cursor: pointer;
 	margin-top: 0.5rem;
-	background-image: url('../assets/icons/icons-google.png');
+	background-image: url('./../assets/icons/icons-google.png');
 	background-repeat: no-repeat;
 	width: 100%;
 }
@@ -190,8 +196,9 @@ body {
 }
 #posts-container {
 	width: 100%;
-	max-width: 1200px;
-	margin-top: 20px;
+	max-width: 800px;
+	margin: 20px auto 0 auto;
+	padding: 0 20px;
 }
 
 /* Styles for each task */
