--- a/styles/main.css
+++ b/styles/main.css
@@ -164,7 +164,7 @@ body {
 	display: none;
 	max-width: 800px;
 	margin: 20px auto 0 auto;
-	padding: 0 20px;
+	padding: 12px 24px;
 	width: 100%;
 }
 
